# assignment

./: POETRY.md  README.md  pyproject.toml
notebooks/: Plots.ipynb
src/: metrics.py
tests/: tests_metrics.py
