[tool.poetry]
name = "demo-knowledge-tracing"
version = "0.1.0"
description = ""
authors = ["Roelant Stegmann <roelant.stegmann@snappet.org>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
pyBKT = "^1.3.1"
pymc3 = "^3.11.2"
numpy = "^1.20.3"
pytest = "^6.2.4"
scikit-learn = "^0.24.2"
jupyter = "^1.0.0"
pywin32 = "^301"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
